<resources>
    <string name="app_name">MOBILE DEVELOPMENT PROJECT</string>
    <string name="main_activity_title">Personal Task Manager</string>
    <string-array name="status_array">
        <item>recorded</item>
        <item>in-progress</item>
        <item>expired</item>
        <item>completed</item>
    </string-array>
    <string name="delete_task_button">Delete Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="task_id_to_delete">Task ID to Delete</string>
    <string name="create_task">Create Task</string>
    <string name="location">Location</string>
    <string name="duration">Duration (hours)</string>
    <string name="start_time">Start Time (HH:mm)</string>
    <string name="description">Description</string>
    <string name="short_name">Short Name</string>
    <string name="welcome_msg">Welcome to your Personal Task Manager!</string>
    <string name="task_name">Task Name</string>
    <string name="create_task_btn">Create Task</string>
    <string name="view_task">View Incomplete Tasks</string>
    <string name="view_all_task">View all Tasks</string>
    <string name="save_changes">Save Changes</string>
    <string name="status">Task Status</string>
    <string name="completed">Completed</string>
    <string name="edit">Edit</string>
    <string name="view_on_google_maps">View Map</string>
    <string name="export_tasks_to_file">Export Tasks to File</string>
    <string name="task_id">Task ID</string>
</resources>
