<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/navy_blue"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/dark_grey">

        <TextView
            android:id="@+id/task_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_id"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_name"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/task_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Task Details -->
        <TextView
            android:id="@+id/task_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/task_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/task_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/task_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/teal_200"
            android:layout_marginVertical="8dp"/>

        <!-- Checkbox and Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">

            <CheckBox
                android:id="@+id/task_completed"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/completed"
                android:textColor="@color/white"
                android:textSize="11sp"/>

            <Button
                android:id="@+id/edit_task_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="0dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/delete_task_button"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/delete_task_button"
                android:textColor="@color/white"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/view_on_map_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/view_on_google_maps"
                android:backgroundTint="@color/teal_700"
                android:textColor="@color/white"
                android:textSize="12sp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
