<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TableLayout
        android:id="@+id/task_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:id="@+id/task_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_id"
                android:padding="8dp"
                android:textStyle="bold"
                android:textColor="@color/navy_blue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_name"
                android:padding="8dp"
                android:textStyle="bold"
                android:textColor="@color/navy_blue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:padding="8dp"
                android:textStyle="bold"
                android:textColor="@color/navy_blue"/>

        </TableRow>
    </TableLayout>
</ScrollView>
