<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <!-- Welcome Message centered at the top -->
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_msg"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <!-- Add Task Button -->
    <Button
        android:id="@+id/add_task_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/create_task_btn"
        android:textColor="@color/white"
        android:backgroundTint="@color/emerald_green"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="100dp"/>

    <!-- View Tasks Button -->
    <Button
        android:id="@+id/view_tasks_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/view_task"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/add_task_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"/>

    <!-- Delete Task Button -->
    <Button
        android:id="@+id/delete_task_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_task"
        android:backgroundTint="@color/dark_red"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/view_tasks_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"/>

    <!-- View All Task Button -->
    <Button
        android:id="@+id/view_all_task_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/view_all_task"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/delete_task_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"/>

    <!-- Export Button -->
    <Button
        android:id="@+id/export_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/export_tasks_to_file"
        android:backgroundTint="@color/header_color"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/view_all_task_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
