<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Task Name -->
        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/short_name"
            android:minHeight="48dp"
            android:maxWidth="300dp"
            android:padding="12dp"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Task Description -->
        <EditText
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/description"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="text"
            android:minHeight="48dp"
            android:maxWidth="300dp"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Task Start Time -->
        <EditText
            android:id="@+id/startTime_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="179dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/start_time"
            android:inputType="time"
            android:autofillHints="none"
            android:minHeight="48dp"
            android:maxWidth="300dp"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Task Duration -->
        <EditText
            android:id="@+id/duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/duration"
            android:inputType="number"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="210dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:minHeight="48dp"
            android:maxWidth="300dp"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/startTime_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Task Location -->
        <EditText
            android:id="@+id/location_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/location"
            android:inputType="text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:minHeight="48dp"
            android:maxWidth="300dp"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Save Task Button -->
        <Button
            android:id="@+id/save_task_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/create_task"
            android:backgroundTint="@color/emerald_green"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:minHeight="48dp"
            android:maxWidth="300dp"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/location_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
